--- a/style.css
+++ b/style.css
@@ -71,3 +71,8 @@ img {
     max-width: 100%; /* Ensure the image is responsive */
     height: auto; /* Maintain aspect ratio */
 }
+.video-container{
+    width:100%;
+    overflow:hidden;
+    text-align:center;
+}
